# natural-selection

./: .gitignore  Cargo.toml  build.rs  shell.nix
.direnv/: cache-unknown  drv
src/: component.rs  constants.rs  dna.rs  main.rs  resource.rs  system.rs  utils.rs
src/dna/: bf.rs
src/system/: collision.rs  life_display.rs  movement.rs  random_move.rs  setup.rs  simulation.rs  tick.rs  turn.rs  ui_update.rs
