[package]
name = "natural-selection"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.2.3"
num-traits = "0.2.12"
rand = "0.7.3"

[dependencies.bevy]
version = "0.2.1"
default-features = false
features = [
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "x11",
]
