[package]
name = "natural-selection"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.2.3"
num-traits = "0.2.12"
rand = "0.7.3"
rand_distr = "0.3.0"
memchr = "2.3.3"
num-derive = "0.3.2"
rayon = "1.4.1"
once_cell = "1.4.1"
crossbeam-channel = "0.5.0"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = [
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "x11",
]

[profile.release]
debug = true
